--- a/pdf-modal.html
+++ b/pdf-modal.html
@@ -3,13 +3,13 @@
 
   <ion-toolbar>
 
- <div padding style="text-align:center;position: initial;display:flex;justify-content:center;flex-direction:row;height:10%;">
-        <p style="margin-left: 30px;color:white; font-size: 123%;">Some_title</p>
+ <div>
+        <p>Some_title</p>
     </div> 
 
     <ion-buttons end>
-      <button ion-button (click)="dismiss()" strong style="width:115%;text-align:center;">
-        <ion-icon name="close" style="color:white;font-size:170%"></ion-icon>
+      <button ion-button (click)="dismiss()" >
+        <ion-icon name="close" ></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
